<resources>
    <string name="app_name">MobileDevelopmentCourseLabApp</string>
    <string name="title_article">Новости</string>
    <string name="title_second">Второй</string>
    <string name="title_third">Третий</string>
    <string name="global_pos">Место: %d</string>
    <string name="info_title">Информация:</string>
    <string name="pos_title">Место:</string>
    <string name="velocity_gen">Скорость генерации контента:</string>
    <string name= "company_title">Название компании:</string>
    <string name= "description">Илон Маск - американский предприниматель, инженер и миллиардер.\n1. Кто он такой?\nИлон Маск родился 28 июня 1971 года в Претории, Южная Африка. Он известен как
        основатель и\nгенеральный директор компании SpaceX, которая занимается аэрокосмической
        техникой и услугами космического транспорта. Также он является генеральным директором и
        архитектором продукта компании Tesla, производителя электромобилей. Илон Маск основал
        The Boring Company, занимающуюся инфраструктурой, и является соучредителем
        Neuralink и OpenAI. В 2021 году он стал самым богатым человеком на планете.\n2. Чем занимается в компании OpenAI?\nВ 2015 году Илон Маск совместно с другими инвесторами и учеными создал OpenAI —
        некоммерческую исследовательскую компанию, которая занимается продвижением искусственного
        интеллекта. OpenAI стремится разрабатывать и применять AI в интересах человечества, а не
        ради прибыли. Они работают над различными проектами, включая развитие языковых моделей,
        робототехнику и другие области.\n3. Взгляд на развитие нейросетей\n
        Илон Маск высказывал осторожность по отношению к искусственному интеллекту. Он считает, что
        AI может представлять опасность, если не будет контролироваться. Он также
        поддерживает исследования в этой области и считает, что правильное использование AI может
        принести огромные выгоды человечеству. Его компания OpenAI также активно работает над
        развитием AI с учетом ответственности и безопасности.
        Илон Маск — фигура, чьи взгляды и достижения оказывают значительное влияние на технологический
        мир и будущее искусственного интеллекта.</string>
    <string name="share">Поделиться</string>
    <string name="statusTitle">Статистика выступлений:</string>
    <string name ="gamesCount">Кол-во игр</string>
    <string name="winCount">Кол-во побед</string>
    <string name="upgradesCount">Кол-во обновлений</string>
    <string name="yellowCardsCount">1 желтая</string>
    <string name="greenCardsCount">3 зеленых</string>
    <string name="count_pattern">%d %s</string>
    <string name="comments_hint">Введите комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="load_value">Загрузить</string>
    <string name="open_in_web">Смотреть на сайте</string>
    <string name="load">Загрузить</string>
    <plurals name="plurals_upgrades">
        <item quantity="one">обновление</item>
        <item quantity="two">обновления</item>
        <item quantity="few">обновления</item>
        <item quantity="many">обновлений</item>
    </plurals>
</resources>